fix overflow snippet

--- a/website/styles/components/_snippet.sass
+++ b/website/styles/components/_snippet.sass
@@ -5,6 +5,7 @@
   display: block
   padding: 1.2rem 1.4rem
   font-family: monospace
+  overflow: auto
 
 .steps
   margin-top: 1.5rem
